# rubiks-cube-solver

./: .gitignore  CMakeLists.txt  FILES.md  INSTALLATION.md  QUICKSTART.md  README.md  setup.sh  test_api.sh
include/: http_server.hpp  hybrid_solver.hpp  ida_star_solver.hpp  mpi_solver.hpp  openmp_solver.hpp  rubiks_cube.hpp  sequential_solver.hpp  solver.hpp
rubiks-frontend/: package-lock.json  package.json
rubiks-frontend/src/: App.js  api.js
src/: http_server.cpp  hybrid_solver.cpp  ida_star_solver.cpp  main.cpp  mpi_solver.cpp  openmp_solver.cpp  rubiks_cube.cpp  sequential_solver.cpp
tests/: CMakeLists.txt  test_solver.cpp
